syntax = "proto3";

package tokenfactory.crud;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "tokenfactory/crud/params.proto";
import "tokenfactory/crud/post.proto";

option go_package = "tokenfactory/x/crud/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/tokenfactory/crud/params";
  
  }
  
  // Queries a list of Post items.
  rpc Post    (QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (google.api.http).get = "/tokenfactory/crud/post/{index}";
  
  }
  rpc PostAll (QueryAllPostRequest) returns (QueryAllPostResponse) {
    option (google.api.http).get = "/tokenfactory/crud/post";
  
  }

  // Queries all historical states of a Post
  rpc PostHistory (QueryPostHistoryRequest) returns (QueryPostHistoryResponse) {
    option (google.api.http).get = "/tokenfactory/crud/post/{index}/history";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetPostRequest {
  string index = 1;
}

message QueryGetPostResponse {
  Post post = 1 [(gogoproto.nullable) = false];
}

message QueryAllPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPostResponse {
  repeated Post                                   post       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryPostHistoryRequest {
  string index = 1;
  cosmos.base.query.v1beta1.PageRequest pagination = 2;
}

message QueryPostHistoryResponse {
  repeated Post                                   post       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

